script fin du body

--- a/index.html
+++ b/index.html
@@ -75,16 +75,17 @@
 	<div class="container py-3">
 		<!-- jai fais des modif ici  faire un modif de toutes le image sur ces modeles  -->
 		<div class="gallery" style="display: none">      
-			<img data-gallery-tag="Concert" class="gallery-item" src="./assets/images/gallery/concerts/concert-aaron-paul.jpg" alt="photo d'un concert d'aaron paul sous chapiteau"/>
-			<img data-gallery-tag="Entreprises" class="gallery-item" src="./assets/images/gallery/entreprise/ali-morshedlou.jpg" alt="photo d'entreprise ali morshedlou"/>
-			<img data-gallery-tag="Entreprises" class="gallery-item" src="./assets/images/gallery/entreprise/jason-goodman.jpg" alt="photo d'entreprise jason goodman"/>
-			<img data-gallery-tag="Mariages" class="gallery-item" src="./assets/images/gallery/mariage/hannah-busing.jpg" alt="photo de mariage hannah busing."/>
-			<img data-gallery-tag="Portrait" class="gallery-item" src="./assets/images/gallery/portraits/ade-tunji.jpg" alt="Portrait ade tunji "/>
-			<img data-gallery-tag="Mariages" class="gallery-item" src="./assets/images/gallery/mariage/jakob-owens.jpg" alt="mariages jakob owens"/>
-			<img data-gallery-tag="Portrait" class="gallery-item" src="./assets/images/gallery/portraits/nino-van-prattenburg.jpg" alt="portrait de nino van prattenburg"/>
-			<img data-gallery-tag="Concert" class="gallery-item" src="./assets/images/gallery/concerts/concert-austin-neill.jpg" alt="photo d'un concert d'austin neill avec fumée en arriere plan"/>
-			<img data-gallery-tag="Entreprises" class="gallery-item" src="./assets/images/gallery/entreprise/mateus-campos-felipe.jpg" alt="photo d'e jsahjjsasj  , c,c,c211n111t<wn  z  mateus campos felipe "/>
+			<img data-gallery-tag="Concert" class="gallery-item" src="./assets/images/gallery/concerts/concert-aaron-paul.jpg" alt="photo d'un concert d'aaron paul sous chapiteau" loading="lazy"/>
+			<img data-gallery-tag="Entreprises" class="gallery-item" src="./assets/images/gallery/entreprise/ali-morshedlou.jpg" alt="photo d'entreprise ali morshedlou" loading="lazy"/>
+			<img data-gallery-tag="Entreprises" class="gallery-item" src="./assets/images/gallery/entreprise/jason-goodman.jpg" alt="photo d'entreprise jason goodman" loading="lazy"/>
+			<img data-gallery-tag="Mariages" class="gallery-item" src="./assets/images/gallery/mariage/hannah-busing.jpg" alt="photo de mariage hannah busing" loading="lazy"/>
+			<img data-gallery-tag="Portrait" class="gallery-item" src="./assets/images/gallery/portraits/ade-tunji.jpg" alt="Portrait ade tunji" loading="lazy"/>
+			<img data-gallery-tag="Mariages" class="gallery-item" src="./assets/images/gallery/mariage/jakob-owens.jpg" alt="mariages jakob owens" loading="lazy"/>
+			<img data-gallery-tag="Portrait" class="gallery-item" src="./assets/images/gallery/portraits/nino-van-prattenburg.jpg" alt="portrait de nino van prattenburg" loading="lazy"/>
+			<img data-gallery-tag="Concert" class="gallery-item" src="./assets/images/gallery/concerts/concert-austin-neill.jpg" alt="photo d'un concert d'austin neill avec fumée en arriere plan" loading="lazy"/>
+			<img data-gallery-tag="Entreprises" class="gallery-item" src="./assets/images/gallery/entreprise/mateus-campos-felipe.jpg" alt="photo d'entrreprise mateus campos felipe" loading="lazy"/>
 		</div>
+		
 	</div>
 	<div class="quote">
 		<figure>
@@ -158,9 +159,14 @@
 		</form>
 	</div>
 	<div class="picture right">
-		<img src="./assets/images/camera.png" alt="Image de l'appareil photo">
+		<img src="./assets/images/camera.jpg" alt="Image de l'appareil photo">
 	</div>
 </div>
 </div>
+<!-- déplacement a la fin pour eviter le blocage -->
+	<script src="./assets/bootstrap/bootstrap.bundle.js"></script>
+	<script src="https://code.jquery.com/jquery-3.4.1.min.js" integrity="sha256-CSXorXvZcTkaix6Yvo6HppcZGetbYMGWSFlBw8HfCJo=" crossorigin="anonymous"></script>
+	<script src="./assets/maugallery.js"></script>
+	<script src="./assets/scripts.js"></script>
 </body>
 </html>
