--- a/index.html
+++ b/index.html
@@ -159,7 +159,7 @@
 		</form>
 	</div>
 	<div class="picture right">
-		<img src="./assets/images/camera.jpg" alt="Image de l'appareil photo">
+		<img src="assets/images/camera.jpg" alt="Image de l'appareil photo">
 	</div>
 </div>
 </div>
