--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
 			<li><a href="#gallery" title="Galerie" aria-label="Accéder à notre galerie d'images">Galerie</a></li>
 			<li><a href="#services" title="Service" aria-label="Découvrir nos services offerts">Service</a></li>
 			<li><a href="#contact" title="Contact" aria-label="Nous contacter">Contact</a></li>
-			<li><a class="social-link" href="https://www.instagram.com/ninacarducci.photo/?hl=fr" target="_blank" title="Instagram" aria-label="Suivez-nous sur Instagram"><img src="assets/images/instagram.png" alt=""></a></li>
+			<li><a class="social-link" href="https://www.instagram.com/ninacarducci.photo/?hl=fr" target="_blank" title="Instagram" aria-label="Suivez-nous sur Instagram"><img src="assets/images/instagram.png" alt="logo instagram" loading="lazy"></a></li>
 		</ul>
 	</div>
 </div>
@@ -40,13 +40,13 @@
 		</div>
 		<div class="carousel-inner">
 			<div class="carousel-item active">
-				<img src="./assets/images/slider/ryoji-iwata.jpg" class="d-block w-100" alt="photo d'un homme d'affaire qui traverse un grand passage pietons">
+				<img src="./assets/images/slider/ryoji-iwata.jpg" class="d-block w-100" alt="photo d'un homme d'affaire qui traverse un grand passage pietons" loading="lazy">
 			</div>
 			<div class="carousel-item">
-				<img src="./assets/images/slider/nicholas-green.jpg" class="d-block w-100" alt="photo de jeunes hommes à un concert">
+				<img src="./assets/images/slider/nicholas-green.jpg" class="d-block w-100" alt="photo de jeunes hommes à un concert" loading="lazy">
 			</div>
 			<div class="carousel-item">
-				<img src="./assets/images/slider/edward-cisneros.jpg" class="d-block w-100" alt="photo d'un couple de nouveau mariés qui s'embrassent">
+				<img src="./assets/images/slider/edward-cisneros.jpg" class="d-block w-100" alt="photo d'un couple de nouveau mariés qui s'embrassent" loading="lazy">
 			</div>
 		</div>
 		<button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide="prev">
@@ -159,7 +159,7 @@
 		</form>
 	</div>
 	<div class="picture right">
-		<img src="assets/images/camera.jpg" alt="Image de l'appareil photo">
+		<img src="assets/images/camera.jpg" alt="Image de l'appareil photo" loading="lazy" >
 	</div>
 </div>
 </div>
