--- a/index.html
+++ b/index.html
@@ -19,6 +19,9 @@
   <meta name="instagram:title" content="Nina Carducci - Photographe"/>
   <meta name="instagram:description" content="Capturant les moments précieux avec passion."/>
   <meta name="instagram:image" content="https://ninacarducci.github.io/assets/images/nina.jpg"/>
+  <meta name="instagram:url" content="https://www.instagram.com/ninacarducci.photo/?hl=fr"/>
+  
+
 
 	
 	<title>Nina Carducci - Photographe</title>
