--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
 		</div>
 		<div class="carousel-inner">
 			<div class="carousel-item active">
-				<img src="./assets/images/slider/ryoji-iwata.jpg" class="d-block w-100" alt="photo d'un homme d'affaire qui traverse un grand passage pietons" loading="lazy">
+				<img src="./assets/images/slider/ryoji-iwata.jpg" class="d-block w-100" alt="photo d'un homme d'affaire qui traverse un grand passage pietons">
 			</div>
 			<div class="carousel-item">
 				<img src="./assets/images/slider/nicholas-green.jpg" class="d-block w-100" alt="photo de jeunes hommes à un concert" loading="lazy">
