--- a/index.html
+++ b/index.html
@@ -53,13 +53,13 @@
 		</div>
 		<div class="carousel-inner">
 			<div class="carousel-item active">
-				<img src="./assets/images/slider/ryoji-iwata.jpg" class="d-block w-100" alt="photo d'un homme d'affaire qui traverse un grand passage pietons">
+				<img src="./assets/images/slider/ryoji-iwata.webp" class="d-block w-100" alt="photo d'un homme d'affaire qui traverse un grand passage pietons">
 			</div>
 			<div class="carousel-item">
-				<img src="./assets/images/slider/nicholas-green.jpg" class="d-block w-100" alt="photo de jeunes hommes à un concert">
+				<img src="./assets/images/slider/nicholas-green.webp" class="d-block w-100" alt="photo de jeunes hommes à un concert">
 			</div>
 			<div class="carousel-item">
-				<img src="./assets/images/slider/edward-cisneros.jpg" class="d-block w-100" alt="photo d'un couple de nouveau mariés qui s'embrassent">
+				<img src="./assets/images/slider/edward-cisneros.webp" class="d-block w-100" alt="photo d'un couple de nouveau mariés qui s'embrassent">
 			</div>
 		</div>
 		<button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide="prev">
