--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
 </div>
 <div id="about">
 	<div class="picture left">
-		<img src="./assets/images/portrait-nina-carducci.jpg" alt="photo portrait de nina carducci jeune femme cheveux bouclée portant une tenue en jean">
+		<img src="./assets/images/portrait-nina-carducci.webp" alt="photo portrait de nina carducci jeune femme cheveux bouclée portant une tenue en jean">
 	</div>
 	<div id="about-me">
 		<h2 class="about-me__title">A propos de moi</h2>
@@ -88,15 +88,15 @@
 	<div class="container py-3">
 		<!-- jai fais des modif ici  faire un modif de toutes le image sur ces modeles  -->
 		<div class="gallery" style="display: none">      
-			<img data-gallery-tag="Concert" class="gallery-item" src="./assets/images/gallery/concerts/concert-aaron-paul.jpg" alt="photo d'un concert d'aaron paul sous chapiteau" loading="lazy"/>
-			<img data-gallery-tag="Entreprises" class="gallery-item" src="./assets/images/gallery/entreprise/ali-morshedlou.jpg" alt="photo d'entreprise ali morshedlou" loading="lazy"/>
-			<img data-gallery-tag="Entreprises" class="gallery-item" src="./assets/images/gallery/entreprise/jason-goodman.jpg" alt="photo d'entreprise jason goodman" loading="lazy"/>
-			<img data-gallery-tag="Mariages" class="gallery-item" src="./assets/images/gallery/mariage/mariage-hannah-busing.jpg" alt="photo de mariage hannah busing" loading="lazy"/>
-			<img data-gallery-tag="Portrait" class="gallery-item" src="./assets/images/gallery/portraits/portrait-ade-tunji.jpg" alt="Portrait ade tunji" loading="lazy"/>
-			<img data-gallery-tag="Mariages" class="gallery-item" src="./assets/images/gallery/mariage/mariage-jakob-owens.jpg" alt="mariages jakob owens" loading="lazy"/>
-			<img data-gallery-tag="Portrait" class="gallery-item" src="./assets/images/gallery/portraits/portrait-nino-van-prattenburg.jpg" alt="portrait de nino van prattenburg" loading="lazy"/>
-			<img data-gallery-tag="Concert" class="gallery-item" src="./assets/images/gallery/concerts/concert-austin-neill.jpg" alt="photo d'un concert d'austin neill avec fumée en arriere plan" loading="lazy"/>
-			<img data-gallery-tag="Entreprises" class="gallery-item" src="./assets/images/gallery/entreprise/mateus-campos-felipe.jpg" alt="photo d'entrreprise mateus campos felipe" loading="lazy"/>
+			<img data-gallery-tag="Concert" class="gallery-item" src="./assets/images/gallery/concerts/concert-aaron-paul.webp" alt="photo d'un concert d'aaron paul sous chapiteau" loading="lazy"/>
+			<img data-gallery-tag="Entreprises" class="gallery-item" src="./assets/images/gallery/entreprise/ali-morshedlou.webp" alt="photo d'entreprise ali morshedlou" loading="lazy"/>
+			<img data-gallery-tag="Entreprises" class="gallery-item" src="./assets/images/gallery/entreprise/jason-goodman.webp" alt="photo d'entreprise jason goodman" loading="lazy"/>
+			<img data-gallery-tag="Mariages" class="gallery-item" src="./assets/images/gallery/mariage/mariage-hannah-busing.webp" alt="photo de mariage hannah busing" loading="lazy"/>
+			<img data-gallery-tag="Portrait" class="gallery-item" src="./assets/images/gallery/portraits/portrait-ade-tunji.webp" alt="Portrait ade tunji" loading="lazy"/>
+			<img data-gallery-tag="Mariages" class="gallery-item" src="./assets/images/gallery/mariage/mariage-jakob-owens.webp" alt="mariages jakob owens" loading="lazy"/>
+			<img data-gallery-tag="Portrait" class="gallery-item" src="./assets/images/gallery/portraits/portrait-nino-van-prattenburg.webp" alt="portrait de nino van prattenburg" loading="lazy"/>
+			<img data-gallery-tag="Concert" class="gallery-item" src="./assets/images/gallery/concerts/concert-austin-neill.webp" alt="photo d'un concert d'austin neill avec fumée en arriere plan" loading="lazy"/>
+			<img data-gallery-tag="Entreprises" class="gallery-item" src="./assets/images/gallery/entreprise/mateus-campos-felipe.webp" alt="photo d'entrreprise mateus campos felipe" loading="lazy"/>
 		</div>
 		
 	</div>
@@ -173,7 +173,7 @@
 			</form>
 		</div>
 		<div class="picture right">
-			<img src="assets/images/camera.jpg" alt="Image de l'appareil photo" loading="lazy" >
+			<img src="assets/images/camera.webp" alt="Image de l'appareil photo" loading="lazy" >
 		</div>
 	</div>
 </div>
