--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
 			<button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="2" aria-label="Slide 3"></button>
 		</div>
 		<div class="carousel-inner">
-			<div class="carousel-item active">
+			<div class="carousel-item">
 				<img src="./assets/images/slider/ryoji-iwata.webp" class="d-block w-100" alt="photo d'un homme d'affaire qui traverse un grand passage pietons">
 			</div>
 			<div class="carousel-item">
