--- a/index.html
+++ b/index.html
@@ -52,12 +52,11 @@
 				<img src="./assets/images/slider/ryoji-iwata.webp" class="d-block w-100" alt="photo d'un homme d'affaire qui traverse un grand passage pietons" loading="lazy">
 			</div>
 			<div class="carousel-item">
-				<img src="./assets/images/slider/nicholas-green.webp" class="d-block w-100" alt="photo de jeunes hommes à un concert" loading="lazy">
+				<img src="./assets/images/slider/nicholas-green.webp" class="d-block w-100" alt="photo de jeunes hommes à un concert">
 			</div>
 			<div class="carousel-item">
-				<img src="./assets/images/slider/edward-cisneros.webp" class="d-block w-100" alt="photo d'un couple de nouveau mariés qui s'embrassent" loading="lazy">
+				<img src="./assets/images/slider/edward-cisneros.webp" class="d-block w-100" alt="photo d'un couple de nouveau mariés qui s'embrassent">
 			</div>
-		</div>
 		<button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide="prev">
 			<span class="carousel-control-prev-icon" aria-hidden="true"></span>
 			<span class="visually-hidden">Previous</span>
