--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
 		</div>
 		<div class="carousel-inner">
 			<div class="carousel-item active">
-				<img src="./assets/images/slider/ryoji-iwata.webp" class="d-block w-100" alt="photo d'un homme d'affaire qui traverse un grand passage pietons" loading="lazy">
+				<img src="./assets/images/slider/ryoji-iwata.webp" class="d-block w-100" alt="photo d'un homme d'affaire qui traverse un grand passage pietons">
 			</div>
 			<div class="carousel-item">
 				<img src="./assets/images/slider/nicholas-green.webp" class="d-block w-100" alt="photo de jeunes hommes à un concert">
@@ -57,6 +57,7 @@
 			<div class="carousel-item">
 				<img src="./assets/images/slider/edward-cisneros.webp" class="d-block w-100" alt="photo d'un couple de nouveau mariés qui s'embrassent">
 			</div>
+		</div>
 		<button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide="prev">
 			<span class="carousel-control-prev-icon" aria-hidden="true"></span>
 			<span class="visually-hidden">Previous</span>
@@ -202,6 +203,5 @@
 	<script src="https://code.jquery.com/jquery-3.4.1.min.js" integrity="sha256-CSXorXvZcTkaix6Yvo6HppcZGetbYMGWSFlBw8HfCJo=" crossorigin="anonymous"></script>
 	<script src="./assets/maugallery.js"></script>
 	<script src="./assets/scripts.js"></script>
-
 </body>
 </html>
