--- a/index.html
+++ b/index.html
@@ -35,7 +35,8 @@
 			<li><a href="#services" title="Service" aria-label="Découvrir nos services offerts">Service</a></li>
 			<li><a href="#contact" title="Contact" aria-label="Nous contacter">Contact</a></li>
 			<li><a href="#contact-info" title="Contact Info" aria-label="Voir nos coordonnées et disponibilités">Coordonnées</a></li>
-			<li><a class="social-link" href="https://www.instagram.com/ninacarducci.photo/?hl=fr" target="_blank" title="Instagram" aria-label="Suivez-nous sur Instagram"><img src="assets/images/instagram.png" alt="logo instagram" loading="lazy"></a></li>
+			<li><a class="social-link" href="https://www.instagram.com/ninacarducci.photo/?hl=fr" target="_blank" title="Instagram" aria-label="Suivez-nous sur Instagram"><img src="assets/images/instagram.png" alt="logo instagram" width="50" height="50" loading="lazy"></a></li>
+
 		</ul>
 	</div>
 </div>
@@ -49,13 +50,13 @@
 		</div>
 		<div class="carousel-inner">
 			<div class="carousel-item active">
-				<img src="./assets/images/slider/ryoji-iwata.webp" class="d-block w-100" alt="photo d'un homme d'affaire qui traverse un grand passage pietons">
+				<img src="./assets/images/slider/ryoji-iwata.webp" class="d-block w-100" alt="photo d'un homme d'affaire qui traverse un grand passage pietons" width="1200" height="800" loading="lazy">
 			</div>
 			<div class="carousel-item">
-				<img src="./assets/images/slider/nicholas-green.webp" class="d-block w-100" alt="photo de jeunes hommes à un concert">
+				<img src="./assets/images/slider/nicholas-green.webp" class="d-block w-100" alt="photo de jeunes hommes à un concert"width="1200" height="800" loading="lazy">
 			</div>
 			<div class="carousel-item">
-				<img src="./assets/images/slider/edward-cisneros.webp" class="d-block w-100" alt="photo d'un couple de nouveau mariés qui s'embrassent">
+				<img src="./assets/images/slider/edward-cisneros.webp" class="d-block w-100" alt="photo d'un couple de nouveau mariés qui s'embrassent"width="1200" height="800" loading="lazy">
 			</div>
 		</div>
 		<button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide="prev">
@@ -70,7 +71,10 @@
 </div>
 <div id="about">
 	<div class="picture left">
-		<img src="./assets/images/portrait-nina-carducci.webp" alt="photo portrait de nina carducci jeune femme cheveux bouclée portant une tenue en jean">
+		<div class="picture left">
+			<img src="./assets/images/portrait-nina-carducci.webp" alt="photo portrait de nina carducci jeune femme cheveux bouclée portant une tenue en jean" width="600" height="800" loading="lazy">
+		</div>
+		
 	</div>
 	<div id="about-me">
 		<h2 class="about-me__title">A propos de moi</h2>
@@ -169,7 +173,7 @@
 			</form>
 		</div>
 		<div class="picture right">
-			<img src="assets/images/camera.webp" alt="Image de l'appareil photo" loading="lazy" >
+			<img src="assets/images/camera.webp" alt="Image de l'appareil photo" width="400" height="300" loading="lazy">
 		</div>
 	</div>
 </div>
