whdth et height html

--- a/index.html
+++ b/index.html
@@ -49,13 +49,13 @@
 		</div>
 		<div class="carousel-inner">
 			<div class="carousel-item active">
-				<img src="./assets/images/slider/ryoji-iwata.webp" class="d-block w-100" alt="photo d'un homme d'affaire qui traverse un grand passage pietons">
+				<img src="./assets/images/slider/ryoji-iwata.webp" class="d-block w-100" alt="photo d'un homme d'affaire qui traverse un grand passage pietons" width="1200" height="555" loading="lazy">
 			</div>
 			<div class="carousel-item">
-				<img src="./assets/images/slider/nicholas-green.webp" class="d-block w-100" alt="photo de jeunes hommes à un concert">
+				<img src="./assets/images/slider/nicholas-green.webp" class="d-block w-100" alt="photo de jeunes hommes à un concert" width="1200" height="555" loading="lazy">
 			</div>
 			<div class="carousel-item">
-				<img src="./assets/images/slider/edward-cisneros.webp" class="d-block w-100" alt="photo d'un couple de nouveau mariés qui s'embrassent">
+				<img src="./assets/images/slider/edward-cisneros.webp" class="d-block w-100" alt="photo d'un couple de nouveau mariés qui s'embrassent" width="1200" height="555" loading="lazy">
 			</div>
 		</div>
 		<button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide="prev">
