--- a/index.html
+++ b/index.html
@@ -10,19 +10,19 @@
 	<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 	<link href="https://fonts.googleapis.com/css2?family=Inter&family=Spectral:ital,wght@0,400;1,300;1,400;1,800&display=swap" rel="stylesheet" defer>
 	<meta charset="UTF-8">
-
   <!-- Balises meta pour les réseaux sociaux -->
-	<meta property="og:title" content="Nina Carducci - Photographe">
-	<meta property="og:description" content="Photographe professionnel spécialisé dans les mariages, portraits et événements. Capturant les moments précieux avec passion.">
-	<meta property="og:image" content="https://ninacarducci.github.io/assets/images/nina.jpg">
-	<meta property="og:url" content="https://ninacarducci.github.io">
+  <!-- Balises meta pour les réseaux sociaux -->
+    <meta property="og:title" content="Nina Carducci - Photographe">
+    <meta property="og:description" content="Photographe professionnel spécialisé dans les mariages, portraits et événements. Capturant les moments précieux avec passion.">
+    <meta property="og:image" content="https://ninacarducci.github.io/assets/portrait-nina-carducci.webp">
+    <meta property="og:url" content="https://ninacarducci.github.io">
 
-	<meta name="instagram:card" content="summary_large_image">
-	<meta name="instagram:title" content="Nina Carducci - Photographe">
-	<meta name="instagram:description" content="Photographe professionnel spécialisé dans les mariages, portraits et événements,Capturant les moments précieux avec passion.">
-	<meta name="instagram:image" content="https://ninacarducci.github.io/assets/images/nina.jpg">
-	<meta name="instagram:url" content="https://www.instagram.com/ninacarducci.photo/?hl=fr">
-		<title>Nina Carducci - Photographe</title>
+    <meta name="instagram:card" content="summary_large_image">
+    <meta name="instagram:title" content="Nina Carducci - Photographe">
+    <meta name="instagram:description" content="Capturant les moments précieux avec passion.">
+    <meta name="instagram:image" content="https://ninacarducci.github.io/assets/images/portrait-nina-carducci.webp">
+    <meta name="instagram:url" content="https://www.instagram.com/ninacarducci.photo/?hl=fr">
+	<title>Nina Carducci - Photographe</title>
 </head>
 <body>
 <div class="top-header">
