--- a/index.html
+++ b/index.html
@@ -175,7 +175,7 @@
 	</div>
 </div>
 <!--  ajout de div pour le referencemet local-->
-<div id="contact-info" itemscope itemtype="http://schema.org/LocalBusiness">
+	<div id="contact-info" itemscope itemtype="http://schema.org/LocalBusiness" name="Nina Carducci - Photographe" image="https://ninacarducci.github.io/assets/portrait-nina-carducci.webp">
     <h3 class="title">Coordonnées et Disponibilité</h3>
 
     <!-- Adresse -->
